--- a/index.html
+++ b/index.html
@@ -53,5 +53,14 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9B1W81XJH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Y9B1W81XJH');
+    </script>
 </body>
 </html>
