--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <button type="submit" hidden></button>
             </form>
             <div id="results" class="result"></div>
-            <div id="history"></div>
         </div>
+        <div class="visual-block" id="history"></div>
         <div class="description visual-block">
             <h2>How to use IPCalc</h2>
             <p>Enter an IP address along with its subnet in the input field. The format should be in IPv4 or IPv6 notation.</p>
