--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="color-scheme" content="dark">
     <title>IPCalc</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <div class="container">
