add current addresses as default when history is blank

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
             <h2>How to use IPCalc</h2>
             <p>Enter an IP address along with its subnet in the input field. The format should be in IPv4 or IPv6 notation.</p>
             <p>Examples:</p>
-            <ul>
-                <li><code>192.168.0.0</code> for an IPv4 address (default subnet /24)</li>
-                <li><code>2000::</code> for an IPv6 address (default subnet /64)</li>
-            </ul>
+            <ul id="examples"></ul>
             <p>Press enter to see detailed information about the IP address and its subnet.</p>
 
             <h2>Motivation for Creating this tool</h2>
